General and MD requirements cleanup.

--- a/edit/saml2int/common_requirements.adoc
+++ b/edit/saml2int/common_requirements.adoc
@@ -20,15 +20,13 @@ Deployments MUST NOT produce any SAML protocol message that contains a (DTD) Doc
 
 ==== SAML entityIDs
 
-The entityID of a SAML entity MUST be scoped to the domain of the organization that is the owner of the application/service, in the case of an SP; or to the domain of the organization whose users are represented by the IdP, in the case of an IdP.
+Deployments MUST be named via an absolute URI whose total length MUST NOT exceed 256 characters.
 
-_Specifically, hosted applications must have entityIDs scoped to the client organization's domain, not the hosting organization's domain._
-
-_An entityID should be chosen in a manner that minimizes the likelihood of it changing for political or technical reasons, including for example a change to a different software implementation._
+_An entityID should be chosen in a manner that minimizes the likelihood of it changing for political or technical reasons, including for example a change to a different software implementation or hosting provider._
 
 ==== Profile Support
 
-Deployments MUST support the SAML V2.0 Web Browser SSO Profile and MUST support the SAML V2.0 Single Logout Profile as defined in <<SAML2Prof>> and as updated by <<SAML2Err>>. Behavior of deployments MUST be consistent with the requirements specified in this deployment profile.
+Deployments MUST support the SAML V2.0 Web Browser SSO Profile and MUST support the SAML V2.0 Single Logout Profile as defined in <<SAML2Prof>> and as updated by <<SAML2Err>>. The behavior, capabilities, and options MUST be consistent with the additional constraints specified in this document.
 
 === Metadata and Trust Management
 
@@ -38,12 +36,13 @@ Deployments MUST provision their behavior in the following areas based solely on
 
 * indications of support for Browser SSO and Single Logout profiles
 * selection, determination, and verification of SAML endpoints and bindings
-* verification of XML signatures and TLS client and server certificates, and determination of trustworthiness of such keys
+* determination of the trustworthiness of XML signing keys and TLS client and server certificates
 * selection of XML Encryption key transport keys
 * determination of subject identifier SAML Attribute(s) to provide (per `<<SAML2SubjId>>`)
-* TBD
+* optional signing of assertions via the `WantAssertionsSigned` flag
+* TBD?
 
-Consumption of metadata MUST be subject to verification of a signature or TLS server certificate.
+Consumption of metadata MUST be contingent on verification of a signature (STRONGLY RECOMMENDED) or TLS server certificate.
 
 ===== Metadata Validity
 
@@ -53,15 +52,15 @@ _These are critical (but very simple to implement) requirements for secure appli
 
 ==== Metadata Production
 
-Deployments MUST have the ability to provide SAML metadata capturing its requirements and characteristics in the areas identified above in a secure fashion, the specifics of which will necessarily vary by context and community. The use of services offering third-party validation, curation, signing, and publishing of metadata is a recommended, though not required, practice.
+Deployments MUST have the ability to provide SAML metadata capturing their requirements and characteristics in the areas identified above in a secure fashion, the specifics of which will necessarily vary by context and community. The use of services offering third-party validation, curation, signing, and publishing of metadata is a recommended practice.
 
-Deployments MUST NOT require out of band communication or coordination for the management of any behavior by peers that is included within the enumerated areas identified above.
+Deployments MUST NOT require out of band communication or coordination for the management of any behavior by peers included within the enumerated areas identified above.
 
 This profile does not mandate any specific automated support for the production of metadata by a deployment. In fact, automatic generation of metadata has a strong tendency to undermine the correct functioning of peer deployments in the face of key rollover or changes to endpoints or other software features because it tends to change too suddenly to accommodate a graceful transition between states.
 
-Metadata MUST NOT contain content that represents profile features that aren't supported or that have not been deliberately and intentionally configured by a deployment.
+Metadata MAY include content indicating support for profiles or features beyond the bounds of this profile, but metadata MUST NOT contain content that advertises profile support or features that aren't supported or that have not been deliberately and intentionally configured by a deployment.
 
-_As an example, deployments that lack support for, or have not tested and integrated an implementation's support for, the Single Logout profile would necessarily omit `<md:SingleLogoutService>` elements. Similarly, deployments lacking support for the HTTP-Artifact binding <<SAML2Bind>> must omit such endpoints._
+_As an example, deployments that lack support for, or have not tested and integrated an implementation's support for the HTTP-Artifact binding <<SAML2Bind>> must omit such endpoints._
 
 ===== Keys and Certificates
 
@@ -69,9 +68,9 @@ Public keys used for signing, encryption, and TLS client and server authenticati
 
 These certificates SHOULD be long-lived and self-signed. To avoid problems with non-conforming SAML implementations, certificates in metadata SHOULD NOT be expired (though deployments complying with this profile MUST accept expired certificates by virtue of <<MetaIOP>>).
 
-RSA public keys MUST be at least 2048 bits in length.
+RSA public keys MUST be at least 2048 bits in length. At least 3072 bits is RECOMMENDED for new deployments.
 
-EC public keys MUST be at least TBD bits in length.
+EC public keys MUST be at least 256 bits in length.
 
 Certificates used MUST NOT be signed with an MD5-based signature algorithm and SHOULD NOT be signed with a SHA1-based signature algorithm.
 
@@ -81,7 +80,7 @@ By virtue of the profile's overall requirements, an Identity Provider's metadata
 
 Metadata MUST include the `<mdui:DisplayName>`, `<mdui:Logo>`, `<mdui:InformationURL>`, and `<mdui:PrivacyStatementURL>` elements.
 
-The content of the `<mdui:Logo>` element MUST be either an `https` URL or an in-line image embedded in a data URI element.
+The content of the `<mdui:Logo>` element MUST be either an `https` URL or an in-line image embedded in a `data` URI element.
 
 At least one `<mdui:Logo>` element MUST have a `height` attribute of `60` and a `width` attribute of `80`.
 
@@ -93,7 +92,7 @@ Any logo referenced by an `<mdui:Logo>` element MUST be in PNG format.
 
 === Cryptographic Algorithms
 
-Deployments MUST default to the following algorithms:
+Deployments MUST default to the following algorithms (picking one from each section):
 
 * Digest
 ** ```http://www.w3.org/2001/04/xmlenc#sha256``` <<XMLEnc>>
@@ -110,11 +109,11 @@ Deployments MUST default to the following algorithms:
 ** ```http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p``` <<XMLEnc>>
 ** ```http://www.w3.org/2009/xmlenc11#rsa-oaep``` <<XMLEnc11>> + 
 
-One of the following digest algorithms MUST be used in conjunction with the above key transport algorithms (the default mask generation function (MGF1 with SHA1) MUST be used):
+The following default digest algorithm MUST be used in conjunction with the above key transport algorithms (the default mask generation function (MGF1 with SHA1) MUST be used):
 
 * ```http://www.w3.org/2001/04/xmlenc#sha256``` <<XMLEnc>>
 
-Deployments SHOULD select digest, signature, and encryption algorithms on the basis of the Metadata Profile for Algorithm Support `<<MetaAlg>>`. The above requirements provide acceptable defaults in the absence of any information (as is common) or in the event that these defaults are supported.
+Deployments SHOULD select digest, signature, and encryption algorithms on the basis of the Metadata Profile for Algorithm Support `<<MetaAlg>>`. The above requirements provide acceptable defaults in the absence of any information (as is common) or in the event that these defaults are supported by a peer.
 
 Deployments MUST NOT use any of the following security-compromised algorithms (even in the presence of the metadata extension indicating a peer supports them):
 
@@ -132,3 +131,5 @@ Deployments MUST NOT use any of the following security-compromised algorithms (e
 
 * Key Transport
 ** ```http://www.w3.org/2001/04/xmlenc#rsa-1_5``` <<XMLEnc>>
+
+_Use of these block encryption algorithms remains widespread at the time of authoring, but they are known to be broken <<XMLEncBreak>>._
